--- a/po/sv_SE/financial.po
+++ b/po/sv_SE/financial.po
@@ -6,13 +6,13 @@
 # Isak Bergdahl <jahve@rocketmail.com>, 2014
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Mateusz Pozar <mateusz@kkvgbg.se>, 2015
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2014-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-21 14:29+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -102,7 +102,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br>"
-msgstr ""
+msgstr "Den valda betalningsmotorntypen har tagits bort.<br>"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Symbol"
@@ -271,7 +271,7 @@ msgstr "Avdragsgill?"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Is Tax?"
-msgstr ""
+msgstr "Är skatt?"
 
 #: CRM/Financial/Form/FinancialAccount.php
 msgid "Tax Rate Should be between 0 - 100"
