--- a/po/fr_CA/member.po
+++ b/po/fr_CA/member.po
@@ -5,7 +5,7 @@
 # Translators:
 # lavamind <jerome@riseup.net>, 2011
 # lavamind <jerome@riseup.net>, 2011
-# Mathieu Lutfy <mathieu@bidon.ca>, 2013-2015
+# Mathieu Lutfy <mathieu@bidon.ca>, 2013-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"PO-Revision-Date: 2016-03-22 19:23+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
@@ -2081,7 +2081,7 @@ msgstr "Adhésions actives"
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Pending and Inactive Memberships"
-msgstr "Adhésions inactives et en attente."
+msgstr "Adhésions inactives ou en attente"
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid ""
