--- a/po/pl_PL/drupal-civicrm.po
+++ b/po/pl_PL/drupal-civicrm.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Dariusz Koryto <nowydako@gmail.com>, 2015
+# Michal Ksiazek <biuro@vismedia.pl>, 2016
 # Michał Mach <michau@gmail.com>, 2013
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -12,9 +13,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-06-12 19:57+0000\n"
-"Last-Translator: Dariusz Koryto <nowydako@gmail.com>\n"
-"Language-Team: Polish (http://www.transifex.com/projects/p/civicrm/language/pl/)\n"
+"PO-Revision-Date: 2016-03-24 13:43+0000\n"
+"Last-Translator: Michal Ksiazek <biuro@vismedia.pl>\n"
+"Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -564,7 +565,7 @@ msgstr ""
 msgid ""
 "Oops! - The CiviCRM settings file (civicrm.settings.php) was not found in "
 "the expected location "
-msgstr ""
+msgstr "Ups, nie odnaleziono pliku CiviCRM settings (civicrm.settings.php) w oczekiwanej lokalizacji"
 
 #: drupal/civicrm.module
 msgid ""
