--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-11 14:52+0000\n"
+"PO-Revision-Date: 2016-03-24 19:06+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -16357,7 +16357,7 @@ msgstr "wissen"
 
 #: templates/CRM/Custom/Page/Field.tpl templates/CRM/Price/Page/Field.tpl
 msgid "Req?"
-msgstr "Noodzakelijk?"
+msgstr "Verplicht?"
 
 #: templates/CRM/Custom/Page/Field.tpl
 msgid "Add Custom Field"
@@ -17157,7 +17157,7 @@ msgstr "Datum waarop dit veld geldig wordt (optioneel).  Gebruik dit als een pri
 msgid ""
 "Date this field expires (optional).  Used for price set fields that are no "
 "longer available after a specific date (e.g. early-bird pricing)."
-msgstr "Datum waarop dit veld vervalt (optioneel).  Gebruik dit voor tijdelijke aanbiedingen (bijv. een prijsset voor vlugge vogels)."
+msgstr "Datum waarop dit veld vervalt (optioneel).  Gebruik dit voor tijdelijke aanbiedingen (bijvoorbeeld een prijsset voor vroege vogels)."
 
 #: templates/CRM/Price/Form/LineItem.tpl templates/CRM/Price/Page/LineItem.tpl
 msgid "Item"
