--- a/po/ru_RU/pledge.po
+++ b/po/ru_RU/pledge.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-03-29 16:56+0000\n"
+"Last-Translator: Фёдор Ходьков <fkhodkov@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -76,7 +76,7 @@ msgstr "Я хочу сделать одноразовый взнос"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "I pledge to contribute this amount every"
-msgstr "Я обещают вносить эту сумму раз в"
+msgstr "Я обещаю вносить эту сумму раз в"
 
 #: CRM/Pledge/BAO/PledgeBlock.php CRM/Pledge/DAO/Pledge.php
 msgid "Pledge Frequency Interval"
