--- a/po/ca_ES/campaign.po
+++ b/po/ca_ES/campaign.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-21 15:19+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-13 15:01+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -29,6 +29,10 @@ msgstr "Campanyes pasades "
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
 msgstr "El paràmetre sid no existeix. No es pot processar."
+
+#: CRM/Campaign/BAO/Petition.php
+msgid "Petition Id and/or Activity Id is not of the type Positive."
+msgstr ""
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Survey - %1"
@@ -85,15 +89,7 @@ msgid "Campaign End Date"
 msgstr "Data de finalització de la campanya"
 
 #: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign Type ID"
-msgstr "ID del tipus de campanya "
-
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign Status ID"
-msgstr "ID de l'estat de la campanya "
-
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign External Identifier"
+msgid "Campaign External ID"
 msgstr ""
 
 #: CRM/Campaign/DAO/Campaign.php
@@ -128,21 +124,25 @@ msgstr "Objectius de la campanya"
 msgid "Goal Revenue"
 msgstr "Objectiu d'ingressos "
 
-#: CRM/Campaign/DAO/Survey.php CRM/Campaign/Form/Survey/Results.php
-#: templates/CRM/Campaign/Form/ResultOptions.tpl
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "Recontact Interval"
-msgstr "Interval per a una nova presa de contacte "
+#: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
+msgid "Survey ID"
+msgstr "ID de l'enquesta "
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Campaign ID"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Follow up Interval"
+msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Instructions"
 msgstr "Instruccions "
 
-#: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
-#: templates/CRM/Campaign/Page/Petition.tpl
-#: templates/CRM/Campaign/Page/Survey.tpl
-msgid "Release Frequency"
-msgstr "Freqüència de llançament "
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Hold Duration"
+msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Maximum number of contacts"
@@ -153,20 +153,32 @@ msgid "Default number of contacts"
 msgstr "Número de contactes per defecte "
 
 #: CRM/Campaign/DAO/Survey.php
-msgid "Last Modified Date"
-msgstr "Data de l'última modificació "
+msgid "Survey Is Active"
+msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
-msgid "Bypass Confirm"
-msgstr "Ometre confirmació "
+msgid "Is Default Survey"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Created By"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Modified"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Modified On"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "No Email Verification"
+msgstr ""
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Edit Campaign"
 msgstr "Editar campanya"
-
-#: CRM/Campaign/Form/Campaign.php
-msgid "Parent Id"
-msgstr "Id del pare"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "- select Parent -"
@@ -322,7 +334,10 @@ msgid "Instructions for interviewers"
 msgstr "Instruccions per a entrevistadors "
 
 #: CRM/Campaign/Form/Survey/Main.php
-msgid "Release frequency"
+#: templates/CRM/Campaign/Form/Search/Survey.tpl
+#: templates/CRM/Campaign/Page/Petition.tpl
+#: templates/CRM/Campaign/Page/Survey.tpl
+msgid "Release Frequency"
 msgstr "Freqüència de llançament "
 
 #: CRM/Campaign/Form/Survey/Main.php
@@ -365,16 +380,18 @@ msgid "Create new result set"
 msgstr "Crear nou conjunt de resultats "
 
 #: CRM/Campaign/Form/Survey/Results.php
-msgid "Create a new result set"
-msgstr "Crear un nou conjunt de resultats"
-
-#: CRM/Campaign/Form/Survey/Results.php
 msgid "Use existing result set"
 msgstr "Utilitzar un conjunt de resultats existents "
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Select Result Set"
 msgstr "Seleccioneu un conjunt de resultats "
+
+#: CRM/Campaign/Form/Survey/Results.php
+#: templates/CRM/Campaign/Form/ResultOptions.tpl
+#: templates/CRM/Campaign/Form/Search/Survey.tpl
+msgid "Recontact Interval"
+msgstr "Interval per a una nova presa de contacte "
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Enter at least one result option."
@@ -391,10 +408,6 @@ msgstr "Un informe detallat de l'enquesta <a href='%1'>%2 </a> s'ha creat."
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Main Information"
 msgstr "Informació principal "
-
-#: CRM/Campaign/Form/Survey/TabHeader.php
-msgid "Results"
-msgstr ""
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
@@ -461,12 +474,20 @@ msgid "We could not found respondent for this survey to release."
 msgstr "No s'han trobat enquestats d'aquesta enquesta per a ser alliberats. "
 
 #: CRM/Campaign/Form/Task/Release.php
-msgid "%1 respondent(s) have been released."
-msgstr "%1 enquestat(s) han estat alliberats."
+msgid "Respondent has been released."
+msgid_plural "%count respondents have been released."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Release.php
-msgid "%1 respondents did not release."
-msgstr "no s'han alliberat els enquestats %1."
+msgid "Released"
+msgstr ""
+
+#: CRM/Campaign/Form/Task/Release.php
+msgid "1 respondent did not release."
+msgid_plural "%count respondents did not release."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
@@ -482,8 +503,11 @@ msgid ""
 msgstr "Aquest entrevistador ja té assignat el número màxim de contactes."
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "You can reserve a maximum of %1 contact(s) at a time for this survey."
-msgstr "Podeu reservar un màxim de %1 contactes a la vegada per a aquesta enquesta."
+msgid "You can reserve a maximum of %count contact at a time for this survey."
+msgid_plural ""
+"You can reserve a maximum of %count contacts at a time for this survey."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
@@ -504,31 +528,86 @@ msgid "Respondent Reservation"
 msgstr "Reserva de l'enquestat "
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "%1 Contact(s) have been reserved."
-msgstr "S'han reservat %1 contactes."
+msgid "%count contact has been reserved."
+msgid_plural "%count contacts have been reserved."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "Respondent(s) has been added to %1 group(s)."
-msgstr "Els enquestat(s) han estat afegits als grup(s) %1."
+msgid "They have been added to %1."
+msgstr ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Reservation Added"
 msgstr "Reserva afegida "
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "Reservation did not add for %1 contact(s)."
-msgstr "La reserva no ha estat afegida per a %1 contactes."
+msgid "Reservation did not add for %count contact."
+msgid_plural "Reservation did not add for %count contacts."
+msgstr[0] ""
+msgstr[1] ""
+
+#: CRM/Campaign/Info.php
+msgid "administer CiviCampaign"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Create new campaign, survey and petition types and their status"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "manage campaign"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Create new campaigns, surveys and petitions, reserve respondents"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "reserve campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Reserve campaign contacts for surveys and petitions"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "release campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Release reserved campaign contacts for surveys and petitions"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "interview campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Record survey and petition responses from their reserved contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "GOTV campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Record that contacts voted"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "sign CiviCRM Petition"
+msgstr ""
 
 #: CRM/Campaign/Page/AJAX.php
 msgid "Respondent Reserved."
 msgstr "Enquestat assignat."
 
-#: CRM/Campaign/Page/AJAX.php
-msgid "Vote Recorded"
-msgstr "Vot registrat"
+#: CRM/Campaign/Page/AJAX.php templates/CRM/Campaign/Form/Gotv.tpl
+msgid "Vote Recorded."
+msgstr "Vot registrat. "
 
-#: CRM/Campaign/Page/Campaign.php CRM/Campaign/Page/DashBoard.php
-#: templates/CRM/Campaign/Form/Campaign.tpl
+#: CRM/Campaign/Page/Campaign.php templates/CRM/Campaign/Form/Campaign.tpl
 msgid "Are you sure you want to delete this Campaign?"
 msgstr "Esteu segur que voleu eliminar aquesta campanya?"
 
@@ -594,6 +673,12 @@ msgid "Search Survey"
 msgstr "Cercar enquesta"
 
 #: CRM/Campaign/Page/DashBoard.php
+msgid "1 Day"
+msgid_plural "%count Days"
+msgstr[0] ""
+msgstr[1] ""
+
+#: CRM/Campaign/Page/DashBoard.php
 msgid "view result set"
 msgstr "Ver conjunt de resultats "
 
@@ -646,10 +731,6 @@ msgid "Save as non voted."
 msgstr "Desat com no votat."
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
-msgid "Vote Recorded."
-msgstr "Vot registrat. "
-
-#: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Vote Cancelled."
 msgstr "Vot cancel·lat"
 
@@ -669,8 +750,14 @@ msgstr "Ja ha signat aquesta petició prèviament."
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
-"You have already signed this petition but you still <b>need to verify your email address</b>.</br>\n"
-"Please check your email inbox for the confirmation email. If you don't find it, verify if it isn't in your spam folder."
+"You have already signed this petition but you still <b>need to verify your "
+"email address</b>."
+msgstr ""
+
+#: templates/CRM/Campaign/Form/Petition/Signature.tpl
+msgid ""
+"Please check your email inbox for the confirmation email. If you don't find "
+"it, verify if it isn't in your spam folder."
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Petition.tpl
@@ -691,6 +778,10 @@ msgstr "Els camps relatius al contacte del que vol recollir."
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Fields about the petition."
 msgstr "Camps de petició."
+
+#: templates/CRM/Campaign/Form/Petition.tpl
+msgid "Click here for new profile"
+msgstr ""
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "This title will be displayed at the top of the thank-you page."
@@ -732,10 +823,6 @@ msgid ""
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Campaign.tpl
-msgid "No campaigns found."
-msgstr "No s'ha trobat cap campanya. "
-
-#: templates/CRM/Campaign/Form/Search/Campaign.tpl
 #: templates/CRM/Campaign/Page/Campaign.tpl
 msgid "Add Campaign"
 msgstr "Afegir campanya "
@@ -749,16 +836,8 @@ msgid "Status ID"
 msgstr "ID de l'estat"
 
 #: templates/CRM/Campaign/Form/Search/EmptyResults.tpl
-msgid "No matching respondent found."
-msgstr "No s'ha trobat cap enquestat que coincideixi."
-
-#: templates/CRM/Campaign/Form/Search/EmptyResults.tpl
 msgid "if you are searching by respondent name, check your spelling"
 msgstr "Si esteu buscant pel nom de l'enquestat, reviseu com ho ha escrit "
-
-#: templates/CRM/Campaign/Form/Search/Petition.tpl
-msgid "No petitions found."
-msgstr "No s'ha trobat cap petició."
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
 msgid "Add Petition"
@@ -781,18 +860,10 @@ msgid "Search Petitions"
 msgstr "Cercar peticions "
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "No surveys found."
-msgstr "No s'ha trobat cap enquesta."
-
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Add Survey"
 msgstr "Afegir enquesta "
-
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "Survey ID"
-msgstr "ID de l'enquesta "
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
 msgid "Survey Type ID"
@@ -944,8 +1015,10 @@ msgstr "Afegir enquestat(s) a un nou grup "
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.hlp
 msgid ""
-"Your organization can use Campaigns to track all constituent interactions related to a particular fund-raising or engagement effort. You can link\n"
-"activities, contributions, event participation, mailings, membership signups, and pledges to a particular campaign."
+"Your organization can use Campaigns to track all constituent interactions "
+"related to a particular fund-raising or engagement effort. You can link "
+"activities, contributions, event participation, mailings, membership "
+"signups, and pledges to a particular campaign."
 msgstr ""
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
@@ -958,13 +1031,9 @@ msgstr "Actualment no hi ha campanyes actives. "
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid ""
-"If you want to associate this record with a campaign, you can <a "
-"href=\"%1\">create a campaign here</a>."
-msgstr "Si voleu associar aquest registre amb una campanya, podeu <a href=\"%1\">crear una campanya aquí</a>."
-
-#: templates/CRM/Campaign/Page/Campaign.tpl
-msgid "No Campaigns found."
-msgstr "No s'ha trobat cap campanya. "
+"If you want to associate this record with a campaign, you can <a %1>create a"
+" campaign here</a>."
+msgstr "Si voleu associar aquest registre amb una campanya, podeu <a %1>crear una campanya aquí</a>."
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
 msgid ""
@@ -1038,178 +1107,18 @@ msgstr "Número màxim de contactes "
 msgid "Default Number Of Contacts"
 msgstr "Quantitat de contactes per defecte"
 
-#: templates/CRM/Campaign/Page/Petition.tpl
-#: templates/CRM/Campaign/Page/Survey.tpl
-msgid "No survey found."
-msgstr "No s'ha trobat cap enquesta. "
-
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey type entered. You can <a href='%1'>add one</a>."
 msgstr "No s'ha introduït cap tipus d'enquesta. Podeu <a href='%1'>afegir un</a>."
 
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign External ID"
+#: CRM/Campaign/DAO/CampaignGroup.php
+msgid "Campaign Group ID"
 msgstr ""
 
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Campaign ID"
+#: CRM/Campaign/DAO/CampaignGroup.php
+msgid "Campaign Group Type"
 msgstr ""
 
-#: CRM/Campaign/DAO/Survey.php
-msgid "Follow up Interval"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Hold Duration"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Is Active"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Is Default Survey"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Created By"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Modified"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Modified On"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "No Email Verification"
-msgstr ""
-
-#: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
-msgid ""
-"If you want to associate this record with a campaign, you can <a %1>create a"
-" campaign here</a>."
-msgstr ""
-
-#: CRM/Campaign/BAO/Petition.php
-msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr ""
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "Respondent has been released."
-msgid_plural "%count respondents have been released."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "Released"
-msgstr ""
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "1 respondent did not release."
-msgid_plural "%count respondents did not release."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "You can reserve a maximum of %count contact at a time for this survey."
-msgid_plural ""
-"You can reserve a maximum of %count contacts at a time for this survey."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "%count contact has been reserved."
-msgid_plural "%count contacts have been reserved."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "They have been added to %1."
-msgstr ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "Reservation did not add for %count contact."
-msgid_plural "Reservation did not add for %count contacts."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Info.php
-msgid "administer CiviCampaign"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Create new campaign, survey and petition types and their status"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "manage campaign"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Create new campaigns, surveys and petitions, reserve respondents"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "reserve campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Reserve campaign contacts for surveys and petitions"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "release campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Release reserved campaign contacts for surveys and petitions"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "interview campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Record survey and petition responses from their reserved contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "GOTV campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Record that contacts voted"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "sign CiviCRM Petition"
-msgstr ""
-
-#: CRM/Campaign/Page/DashBoard.php
-msgid "1 Day"
-msgid_plural "%count Days"
-msgstr[0] ""
-msgstr[1] ""
-
-#: templates/CRM/Campaign/Form/Petition/Signature.tpl
-msgid ""
-"You have already signed this petition but you still <b>need to verify your "
-"email address</b>."
-msgstr ""
-
-#: templates/CRM/Campaign/Form/Petition/Signature.tpl
-msgid ""
-"Please check your email inbox for the confirmation email. If you don't find "
-"it, verify if it isn't in your spam folder."
-msgstr ""
-
-#: templates/CRM/Campaign/Form/addCampaignToComponent.hlp
-msgid ""
-"Your organization can use Campaigns to track all constituent interactions "
-"related to a particular fund-raising or engagement effort. You can link "
-"activities, contributions, event participation, mailings, membership "
-"signups, and pledges to a particular campaign."
+#: templates/CRM/Campaign/Page/SurveyType.tpl
+msgid "There are no survey types entered. You can <a href='%1'>add one</a>."
 msgstr ""
